BackEnd con procedimientos almacenados parte uno

--- a/back-end/.env
+++ b/back-end/.env
@@ -1,5 +1,11 @@
-PORT = 8000
+#SERVER PORT
+PORT=8000
 
-database = db_breastcancer
-user = root
-password = Gvf8922123sc+.
+#DATABASE CONECTION
+database=dbhss
+user=root
+password=mysql
+
+#AUTH
+JWT_SECRET="GVF0026694"
+JWT_EXPIRATION=6h
