--- a/back-end/package.json
+++ b/back-end/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "back-end",
+  "name": "hss-back",
   "version": "1.0.0",
-  "description": "back-end breast cancer app",
+  "description": "HSS System Back-end",
   "main": "server.js",
   "type": "module",
   "scripts": {
@@ -12,14 +12,20 @@
   "author": "Fernando Guzman - Delma Dafne",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.3.2",
+    "bcrypt": "^5.1.0",
     "body-parser": "^1.20.1",
+    "brython": "^3.11.1",
+    "child_process": "^1.0.2",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-jwt": "^8.3.0",
     "jsonwebtoken": "^9.0.0",
     "mysql2": "^3.0.1",
-    "sequelize": "^6.28.0"
+    "python": "^0.0.4",
+    "sequelize": "^6.28.0",
+    "validator": "^13.9.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
